; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_block.c_block_heap_Alloc.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_block.c_block_heap_Alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@block_heap_cbs = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @block_heap_Alloc(i8* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = call i32* @malloc(i32 4)
  store i32* %7, i32** %6, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @free(i8* %11)
  store i32* null, i32** %3, align 8
  br label %18

13:                                               ; preds = %2
  %14 = load i32*, i32** %6, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call i32* @block_Init(i32* %14, i32* @block_heap_cbs, i8* %15, i64 %16)
  store i32* %17, i32** %3, align 8
  br label %18

18:                                               ; preds = %13, %10
  %19 = load i32*, i32** %3, align 8
  ret i32* %19
}

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i32* @block_Init(i32*, i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
